--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,15 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "react": "latest",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "react": "^18.2.0",
     "react-dialog-async": "^1.1.1",
-    "react-dom": "latest",
+    "react-dom": "^18.2.0",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "latest",
-    "typescript": "latest"
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
