--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
+    "swr": "^1.3.0",
     "typescript": "^4.8.3"
   },
   "scripts": {
