--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "@mui/material": "latest",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "apexcharts": "^3.35.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dialog-async": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.0",
