--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "@faker-js/faker": "^7.5.0",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "latest",
+    "@openapitools/openapi-generator-cli": "^2.5.2",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "apexcharts": "^3.35.5",
+    "axios": "^1.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dialog-async": "^1.2.0",
@@ -23,6 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "gen-client": "ts-node ./scripts/generateSwaggerClient",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "eslint": "^8.23.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1"
   }
 }
