--- a/backend/spec.yaml
+++ b/backend/spec.yaml
@@ -56,6 +56,7 @@ paths:
               required:
                 - answers
                 - levelData
+                - userCode
               properties:
                 answers:
                   type: array
@@ -63,6 +64,9 @@ paths:
                     type: string
                 levelData:
                   type: object
+                userCode:
+                  type: string
+
       responses:
         "201":
           description: Successfully created the reflection
